# text-to-speech-apib0b78b86-bccc-4b5b-87e8-fa56a8e3992e

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: convert_text_to_speech_service.py  server.py
